# b2-client

./: CONTRIBUTING.md  Cargo.toml  README.md  project.todo
.builds/: archlinux.yml  debian.yml
examples/: LICENSE.txt  README.md  upload_and_download.rs
src/: account.rs  bucket.rs  client.rs  error.rs  file.rs  lib.rs  types.rs  validate.rs
test_sessions/: auth_account.yaml  bad_auth_account.yaml  buckets.yaml  delete_file.yaml  file.yaml  large_file.yaml
tests/: custom_http_client.rs
