[package]
name = "b2-client"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Frame <code@ryanjframe.com>"]
license = "MPL-2.0"

description = "HTTP client-agnostic Backblaze B2 client library"
categories = [ "api-bindings" ]
keywords = [ "http", "client", "b2", "backblaze" ]

repository = "https://git.sr.ht/~rjframe/b2-client"
readme = "README.md"

exclude = [ ".builds/*", "deny.toml" ]

# TODO: Add awc?
[features]
default = []
# These features can only be enabled exclusively of each other:
with_surf = [ "surf", "async-std" ]
with_hyper = [ "hyper", "hyper-tls", "tokio", "http" ]
with_isahc = [ "isahc", "futures-lite" ]

[dependencies]
surf = { version = "2.1.0", optional = true , features = [
    "curl-client",
], default-features = false }
async-std = { version = "1.6.0", optional = true, features = [
    "std"
], default-features = false }

# TODO: Can I remove runtime?
hyper = { version = "0.14.13", optional = true, features = [
    "client",
    "http1",
    "runtime",
], default-features = false }
hyper-tls = { version = "0.5.0", optional = true }
tokio = { version = "1.12.0", optional = true, features = [
    "fs",
    "io-util",
    "rt", # TODO: Only use this in dev-dependencies?
] }
http = { version = "0.2.5", optional = true, default-features = false }

isahc = { version = "1.5.0", optional = true, features = [
], default-features = false }
futures-lite = { version = "1.10.1", optional = true }

async-trait = "0.1.51"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = [ "serde" ] }
http-types = { version = "2.11.0", default-features = false }
md5 = "0.7.0"
percent-encoding = "2.1.0"
serde = { version = "1.0.100", features = [ "derive" ] }
serde_json = "1.0.51"
url = "2.2.0"

[dev-dependencies]
surf-vcr = "0.2.0"
async-std = { version = "1.6.0", features = [ "attributes" ] }
anyhow = "1.0.26"
